chore(options): fix misalignment in options row

--- a/apps/client/src/widgets/type_widgets/options/components/OptionsRow.css
+++ b/apps/client/src/widgets/type_widgets/options/components/OptionsRow.css
@@ -8,6 +8,7 @@
 .option-row > label {
     width: 40%;
     margin-bottom: 0 !important;
+    flex-shrink: 0;
 }
 
 .option-row > select,
